# rainmeter-headset-plugin

./: CMakeLists.txt  HeadsetBattery.ini  Plugin.cpp  README.md  build.yml
